...
                            58,
                          ),
                          padding: const EdgeInsets.symmetric(vertical: 12),
                          shape: const StadiumBorder(),
                        ),
                        child: Text(
                          'GUESS!',
                          style: GoogleFonts.signika(
                            fontSize: 25,
                            color: Colors.black,
                          ),
                        ),
                      ),
...
